# JapaneseFrequencyProcessor

./: .coveragerc  .gitignore  LICENSE  README.md  dev_requirements.txt  docs.sh  index.html  lint.sh  pyproject.toml  search.js  setup.cfg  test.sh
.github/workflows/: docs.yaml  python-publish.yml  test.yaml
docs/: index.html  jp_frequency_list.html  jpfreq.html  kanji.html  main.html  text_info.html  util.html  word.html  word_slot.html
docs/exporters/: iexporter.html  index.html  json.html
docs/jpfreq/: index.html  jp_frequency_list.html  kanji.html  main.html  text_info.html  util.html  word.html  word_slot.html
docs/jpfreq/exporters/: iexporter.html  json.html
documentation/: jp_frequency_list.md  kanji.md  main.md  text_info.md  word_slot.md
jpfreq/: exporters.html  index.html  kanji.html  word_slot.html
jpfreq/exporters/: index.html
src/: test.sh
src/jpfreq/: __init__.py  frequency_exporter.py  jp_frequency_list.py  kanji.py  main.py  text_info.py  util.py  word.py  word_slot.py  word_types.py
src/jpfreq/exporters/: __init__.py  iexporter.py  json.py
tests/: bigsite1.html  bigtext1.txt  bigtext2.txt  test_frequency_list.py  test_kanji.py  test_textinfo.py  test_util.py  test_word.py  test_wordslots.py
tests/exporters/: test_json.py
