[metadata]
name = JPFreq
version = 0.0.1
author = Marley Mulvin Broome
author_email = marley.developer@gmail.com
description = Provides the parsing and analysis of Japanese text into frequency lists
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CSharpProjector/JapaneseFrequencyProcessor
project_urls =
    Bug Tracker = https://github.com/CSharpProjector/JapaneseFrequencyProcessor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src